added jshint config

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "## Team - [@SemenovaEkaterina](https://github.com/SemenovaEkaterina) - [@J0kerPanda](https://github.com/J0kerPanda)",
   "main": "index.js",
   "scripts": {
+    "lint": "jshint --config .jshintrc ./static/blocks/**/*[!.pug].js && jshint --config .jshintrc ./static/*.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run pug && node server.js",
-    "pug": "pug -c -D -E pug.js -n score_table_tmpl static/blocks/score_table/score_table.pug && pug -c -D -E pug.js -n user_area_tmpl static/blocks/user_area/user_area.pug && pug -c -D -E pug.js -n image_croc_tmpl static/blocks/image_croc/image_croc.pug && pug -c -D -E pug.js -n form_tmpl static/blocks/form/form.pug"
+    "start": "npm run lint && npm run pug && node server.js",
+    "pug": "pug -c -D -E pug.js static/blocks/**/*.pug"
   },
   "repository": {
     "type": "git",
