--- a/.jshintrc
+++ b/.jshintrc
@@ -1,5 +1,9 @@
 {
-  "undef": false,
+  "undef": true,
   "unused": true,
-  "esversion": 6
+  "esversion": 6,
+  "globals": {
+    "window": true,
+    "document": true
+  }
 }
