--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "jshint --config .jshintrc ./static",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run lint && npm run pug",
     "start": "npm run pug && node server.js",
     "pug": "pug -c -D -E pug.js static/blocks/**/*.pug"
   },
