--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "lint": "jshint --config .jshintrc ./static",
     "test": "npm run lint && npm run pug",
-    "start": "npm run pug && node server.js",
-    "pug": "pug -c -D -E pug.js static/blocks/**/*.pug"
+    "start": "npm run webpack && node server.js",
+    "pug": "pug -c -D -E pug.js static/blocks/**/*.pug",
+    "webpack": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,14 @@
   },
   "homepage": "https://github.com/frontend-park-mail-ru/2017_1_Vstaem-uhodim#readme",
   "devDependencies": {
-    "jshint": "^2.9.4"
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
+    "css-loader": "^0.27.3",
+    "jshint": "^2.9.4",
+    "pug-loader": "^2.3.0",
+    "style-loader": "^0.16.0",
+    "webpack": "^2.3.0"
   },
   "dependencies": {
     "pug-cli": "^1.0.0-alpha6"
