--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "## Team - [@SemenovaEkaterina](https://github.com/SemenovaEkaterina) - [@J0kerPanda](https://github.com/J0kerPanda)",
   "main": "index.js",
   "scripts": {
-    "lint": "jshint --config .jshintrc ./static",
-    "test": "npm run lint && npm run pug",
+    "lint": "eslint static && jshint --config .jshintrc ./static",
+    "test": "npm run lint",
     "start": "npm run webpack && node server.js",
-    "pug": "pug -c -D -E pug.js static/blocks/**/*.pug",
     "webpack": "webpack --config webpack.config.js"
   },
   "repository": {
@@ -26,6 +25,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "css-loader": "^0.27.3",
+    "eslint": "^3.19.0",
     "jshint": "^2.9.4",
     "pug-loader": "^2.3.0",
     "style-loader": "^0.16.0",
