--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2015": "^6.24.0",
     "css-loader": "^0.27.3",
     "eslint": "^3.19.0",
+    "glob": "^7.1.1",
     "jshint": "^2.9.4",
     "pug-loader": "^2.3.0",
     "style-loader": "^0.16.0",
