--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "pug-loader": "^2.3.0",
     "style-loader": "^0.16.0",
     "webpack": "^2.3.0"
+  },
+  "dependencies": {
+    "pug-cli": "^1.0.0-alpha6"
   }
 }
