--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,25 @@
 {
   "rules": {
-    "no-mixed-spaces-and-tabs": ["error"],
-    "no-multi-spaces": ["error"],
-    "no-multiple-empty-lines": ["error"]
+    "no-mixed-spaces-and-tabs": [2],
+    "no-multi-spaces": [2],
+    "no-multiple-empty-lines": [2],
+    "no-console": [2],
+    "no-constant-condition": [2],
+    "no-extra-parens": [2],
+    "no-extra-semi": [2],
+    "eqeqeq": [2],
+    "no-var": [2],
+    "prefer-const": [2],
+    "prefer-spread": [2],
+    "prefer-template": [2],
+    "prefer-destructuring": [2],
+    "prefer-arrow-callback": [2],
+    "no-useless-constructor": [2],
+    "no-dupe-class-members": [2],
+    "no-duplicate-imports": [2],
+    "block-spacing": [2],
+    "indent": ["error", "tab", { "SwitchCase": 1 }]
+
   },
   "parserOptions": {
     "ecmaVersion" : 8,
