--- a/package.json
+++ b/package.json
@@ -20,18 +20,17 @@
     "url": "https://github.com/frontend-park-mail-ru/2017_1_Vstaem-uhodim/issues"
   },
   "homepage": "https://github.com/frontend-park-mail-ru/2017_1_Vstaem-uhodim#readme",
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "css-loader": "^0.27.3",
     "eslint": "^3.19.0",
     "glob": "^7.1.1",
+    "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
     "style-loader": "^0.16.0",
     "webpack": "^2.3.0"
-  },
-  "dependencies": {
-    "pug-cli": "^1.0.0-alpha6"
   }
 }
