--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-regenerator-runtime": "^6.5.0",
     "css-loader": "^0.27.3",
     "eslint": "^3.19.0",
     "glob": "^7.1.1",
