--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "css-loader": "^0.27.3",
     "eslint": "^3.19.0",
     "glob": "^7.1.1",
+    "postcss-loader": "^1.3.3",
+    "precss": "^1.4.0",
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
     "style-loader": "^0.16.0",
-    "webpack": "^2.3.0"
+    "webpack": "^2.4.1"
   }
 }
