--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
     "style-loader": "^0.16.0",
-    "webpack": "^2.4.1"
+    "webpack": "^2.4.1",
+    "whatwg-fetch": "^2.0.3"
   }
 }
