--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-regenerator-runtime": "^6.5.0",
     "css-loader": "^0.27.3",
     "eslint": "^3.19.0",
+    "file-loader": "^0.11.1",
     "glob": "^7.1.1",
     "postcss-loader": "^1.3.3",
     "precss": "^1.4.0",
