--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint static",
     "test": "npm run lint && npm run webpack",
-    "start": "node server.js",
+    "start": "npm run webpack && node server.js",
     "webpack": "webpack --config webpack.config.js"
   },
   "repository": {
