--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ node_js:
 services:
   - docker
 install: true
+before_script:
+  - npm run webpack
 script:
   - docker login --username=_ --password=$(echo $API_KEY) registry.heroku.com
   - docker build -t registry.heroku.com/vstaem-dev/web .
