--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 server {
-        listen *:80;
+        include listen.conf;
         types {
             text/html  html;
             image/png  png;
