--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services:
   - docker
 install: true
 before_script:
+  - npm install
   - npm run webpack
 script:
   - docker login --username=_ --password=$(echo $API_KEY) registry.heroku.com
