--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "eslint static",
     "test": "npm run lint && npm run webpack",
+    "start": "node server.js",
     "postinstall": "npm run webpack",
     "webpack": "webpack --config webpack.config.js"
   },
