--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,12 @@ branches:
 deploy:
   - provider: script
     script: deploy.sh
+    skip_cleanup: true
     on:
       branch: development
   - provider: script
     script: deploy.sh prod
+    skip_cleanup: true
     on:
       branch: master
 
