--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ branches:
   - development
 deploy:
   - provider: script
-    script: deploy.sh
+    script: "./deploy.sh"
     skip_cleanup: true
     on:
       branch: development
