--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ branches:
   - development
 deploy:
   - provider: script
-    script: "./deploy.sh"
+    script: "./deploy.sh vstaem-dev"
     skip_cleanup: true
     on:
       branch: development
   - provider: script
-    script: deploy.sh prod
+    script: "./deploy.sh vstaem"
     skip_cleanup: true
     on:
       branch: master
