--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,8 @@
 server {
         include listen.conf;
+        if ($http_x_forwarded_proto != "https") {
+        return 301 https://$host$request_uri;
+        }
         types {
             text/html  html;
             image/png  png;
