--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint static",
     "test": "npm run lint && npm run webpack && npm run imgo",
     "start": "npm run imgo && npm run webpack && node server.js",
-    "webpack": "webpack --config webpack.config.js",
+    "webpack": "webpack -p --config webpack.config.js",
     "imgo": "imgo -m -b --png *.png"
   },
   "repository": {
